# similarity

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
extend/: .gitignore
similarity_calculate/: __init__.pyi
src/: calculate.rs
src/server/: main.py
src/server/extend/: .gitignore  Cargo.toml  pyproject.toml
src/server/extend/similarity_calculate/: __init__.py  __init__.pyi
src/server/extend/similarity_calcute/: __init__.py  __init__.pyi
src/server/extend/src/: calculate.rs  calculate_chars.rs  lib.rs
