[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abeautifulsnow", email = "1491444340@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
