[package]
name = "similarity_calculate"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "similarity_calculate"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.12"
jieba-rs = "0.8.0"
pyo3 = "0.25.1"
rapidfuzz = "0.5.0"
regex = { version = "1.11.1", features = ["unicode", "unicode-perl"] }
unicode-normalization = "0.1.24"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
opt-level = 3

[profile.release.build-override]
opt-level = 3

[package.metadata.maturin]
name = "similarity_calculate"

[workspace]
members = [
    "./",
]

[lints]
workspace = true

[workspace.lints.clippy]
cast_precision_loss = "allow"
